# spack

./: .gitignore  CMakeLists.txt
installer/: spack.wxs  spack_cmd.bat.in
lib/spack/llnl/util/: filesystem.py  lang.py  lock.py
lib/spack/llnl/util/tty/: __init__.py  log.py  winlog.py
lib/spack/spack/: database.py  fetch_strategy.py  filesystem_view.py  install_test.py  installer.py  patch.py  stage.py
lib/spack/spack/cmd/: generate.py  make_installer.py
lib/spack/spack/cmd/installer/: CMakeLists.txt  README.md  patch.xml  spack.wxs.in  spack_cmd.bat.in
lib/spack/spack/test/: cache_fetch.py  config.py  packaging.py  s3_fetch.py  stage.py  url_fetch.py
lib/spack/spack/test/llnl/util/: lock.py
lib/spack/spack/util/: executable.py
